fix wrapping and centering

--- a/packages/edit-site/src/components/header/document-actions/style.scss
+++ b/packages/edit-site/src/components/header/document-actions/style.scss
@@ -26,16 +26,20 @@
 	}
 
 	&.has-secondary-label {
-		.edit-site-document-actions__title {
+		.edit-site-document-actions__title-wrapper {
 			position: absolute;
-			left: 0;
-			color: $gray-900;
-			font-weight: bold;
-			transform: translateY(-12px);
+			white-space: nowrap;
 
-			&.is-secondary-title-active {
-				color: $gray-700;
-				font-weight: normal;
+			.edit-site-document-actions__title {
+				color: $gray-900;
+				font-weight: bold;
+				transform: translateY(-12px);
+				white-space: nowrap;
+
+				&.is-secondary-title-active {
+					color: $gray-700;
+					font-weight: normal;
+				}
 			}
 		}
 
